--- a/HTML_Lists.html
+++ b/HTML_Lists.html
@@ -80,6 +80,22 @@
 
     <!-- ul>li*5   short technic (call emmet) (Search for emmet cheat sheet)-->
 
+    <br><br><br>
+
+     <h1>Desciption List</h1>
+<!-- no symbol or character before list -->
+     <dl>
+        <dt>Mobile</dt>
+        <dd>Symphone</dd>
+        <dt>Laptop</dt>
+        <dd>Php Note Book</dd>
+
+        <dt>Laptop</dt>
+        <dd>- Php Note Book</dd>
+        <dd>- Django Note Book</dd>
+     </dl>
+     
+
 
 
 
